--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,461 @@
-.App {
-  text-align: center;
+*{
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+.nav{
+    /* border: 2px solid red; */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    background-color: #110B0F;
+    color: white;
+    border-bottom: 1px solid #473838;
+    /* position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10; */
+}
+/* h-16.54 w-32 */
+.nav-item11 img{
+    height: 50px;
+    width: 96.75px;
+    cursor: pointer;
+}
+.nav-item11{
+    display: flex;
+    flex-direction: row;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.left-item{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.shop, .propicks, .insideskullcandy{
+    margin-left: 32px;
+    font-size: 12px;
+    cursor: pointer;
+    font-weight: 400;
+    padding-bottom: 5px;
+}
+.shop:hover, .propicks:hover, .insideskullcandy:hover{
+    border-bottom: 2px solid rgb(140, 136, 136);
+    transition: 0.1s ease-in;
+    
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+
+.support{
+    font-size: 12px;
+    cursor: pointer;
+    font-weight: 50;
+    margin-right: 32px;
+}
+.nav-item2{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.common{
+    margin-right: 32px;
+    font-size: 24px;
+    cursor: pointer;
+    font-weight: 400;
+}
+/*  */
+.shophover{
+    height: 150px;
+    width: 100%;
+    background-color: white;
+    /* position: absolute;
+    top: 100px;
+    z-index: 10;
+    display: none; */
+}
+.shophover1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    border: 2px solid green;
+    height: 150px;
+    padding-top: 30px;
+    
+}
+.shophover11{
+    padding-right: 30px;
+    border-right: 1px solid rgb(44, 33, 33);
+    height: 100px;
+}
+.shophover11 li{
+    list-style: none;
+    font-size: 12px;
+    font-weight: 400;
+    padding-bottom: 10px;
+}
+.shophover12{
+    display: flex;
+    flex-direction: row;
+    width: 800px;
+    margin-left: -100px;
+}
+.shophover12 div{
+    display: flex;
+    flex-direction: column;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+.shophover12 div h1{
+    font-size: 16px;
+    font-weight: 700;
+    padding-bottom: 10px;
+}
+.shophover12 div p{
+    font-size: 12px;
+    font-weight: 400;
+    padding-bottom: 10px;
+}
+.sale{
+    color: red;
+}
+/* .shop{
+    position: relative;
+}
+.shop:hover .shophover{
+    display: block;
+} */
+/*  */
+.nav2{
+    width: 100%;
+    height: 30px;
+    background-color: #110B0F;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.nav2 p{
+    text-align: center;
+    font-size: 10px;
+    font-weight: 400;
+    color: white;
+}
+.layout1{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 2fr 1fr;
+}
+.first{
+    grid-row-start: 1;
+    grid-row-end: 3;
+    position: relative;
+
+}
+.first img{
+    width: 100%;
+    height: 100%;
+}
+.cl1{
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    font-size: 48px;
+    font-weight: 800;
+    color: white;
+}
+.cl2{
+    position: absolute;
+    top: 15%;
+    left: 10%;
+    font-size: 48px;
+    font-weight: 800;
+    color: white;
+}
+.cl3{
+    position: absolute;
+    top: 23%;
+    left: 10%;
+    font-size: 16px;
+    font-weight: 500;
+    color: white;
+}
+.cl4{
+    position: absolute;
+    top: 25%;
+    left: 10%;
+    font-size: 16px;
+    font-weight: 500;
+    color: white;
+}
+.cl5{
+    position: absolute;
+    top: 30%;
+    left: 10%;
+    font-size: 12px;
+    font-weight: 350;
+    color: black;
+    border: 1px solid white;
+    background-color: white;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+
+}
+.second{
+    position: relative;
+}
+.cl6{
+    position: absolute;
+    top: 20%;
+    left: 23%;
+    font-size: 18px;
+    font-weight: 800;
+    color: white;
+}
+.cl7{
+    position: absolute;
+    top: 28%;
+    left: 40%;
+    font-size: 12px;
+    font-weight: 500;
+    color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.third{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    position: relative;
+}
+.cl8{
+    position: absolute;
+    top: 22%;
+    left: 10%;
+    font-size: 16px;
+    font-weight: 800;
+    color: white;
+
+}
+.cl9{
+    position: absolute;
+    top: 28%;
+    left: 35%;
+    font-size: 12px;
+    font-weight: 400;
+    color: white;
+}
+.layout2{
+    display: flex;
+    flex-direction: row;
+}
+.lt21{
+    position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.lt21:hover button{
+    display: block;
+}
+.button{
+    position: absolute;
+    top: 75%;
+    left: 30%;
+    display: none;
+    border: 1px solid white;
+    background-color: white;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-weight: 300;
+    font-size: 12px;
+}
+.lt22{
+    position: relative;
+}
+.lt22:hover .button{
+    display: block;
+}
+.lt23{
+    position: relative;
+}
+.lt23:hover .button{
+    display: block;
+}
+.lt21, .lt22, .lt23{
+    width: 33.33%;
+    height: 100%;
+    cursor: pointer;
+}
+.lt22:hover, .lt23:hover{
+border-right: 1px solid rgb(24, 12, 12);
+}
+
+.layout3{
+    position: relative;
+}
+.lt31{
+    position: absolute;
+    top: 25%;
+    left: 7%;
+    font-size: 48px;
+    font-weight: 760;
+    color: white;
+}
+.lt32{
+    position: absolute;
+    top: 33%;
+    left: 7%;
+    font-size: 48px;
+    font-weight: 760;
+    color: white;
+}
+.lt33{
+    position: absolute;
+    top: 48%;
+    left: 7%;
+    font-size: 16px;
+    font-weight: 400;
+    color: white;
+    width: 370px;
+    line-height: 0.9rem;
+}
+.lt34{
+    position: absolute;
+    top: 53%;
+    left: 7%;
+    font-size: 16px;
+    font-weight: 400;
+    color: white;
+    width: 350px;
+}
+.ltbt3{
+    position: absolute;
+    top: 63%;
+    left: 7%;
+    font-size: 12px;
+    font-weight: 400;
+    color: black;
+    border: 1px solid white;
+    background-color: whitesmoke;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.footer{
+    width: 100%;
+    height: 200px;
+    display: grid;
+    grid-template-rows: 1;
+    grid-template-columns: 1fr 1fr 1fr;
+    color: white;
+    background-color: #000000;
+    position: relative;
+}
+.ft1 p{
+    font-size: 16px;
+    font-weight: 700;
+    position: absolute;
+    top: 20%;
+    left: 10%;
+}
+.ft1 input{
+    position: absolute;
+    top: 36%;
+    left: 7%;
+    width: 200px;
+    height: 40px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.ft2{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    position: relative;
+}
+.ft1, .ft2, .ft3{
+    height: 100%;
+}
+.ft21{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 20%;
+    left: 10%;
+}
+.ft22{
+position: absolute;
+top: 20%;
+left: 40%;
+}
+.ft23{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 20%;
+    left: 70%;
+}
+.ftcommon{
+    font-size: 12px;
+    font-weight: 450;
+    cursor: pointer;
+}
+.ft3{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+.ft32{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 30%;
+    position: absolute;
+    top: 33%;
+}
+.ft31{
+    font-size: 14px;
+    font-weight: 700;
+    position: absolute;
+    top: 20%;
+    left: 40%;
+}
+.ftl1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 30px;
+    color: white;
+    background-color: #000000;
+    border-top: 0.5px solid white;
+}
+.ftl11{
+    font-size: 12px;
+}
+.ftl12{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 150px;
+    margin-right: 40px;
 }
