--- a/src/App.css
+++ b/src/App.css
@@ -27,11 +27,11 @@
     align-items: center;
     font-size: 12px;
     cursor: pointer;
+    padding: 10px;
 }
 .sidebar2{
     width: 100%;
     height: 40px;
-    border: 1px solid black;
     display: flex;
     flex-direction: row;
     align-items: center;
